--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Number Ninja</string>
-    <string name="title_play">Play</string>
+    <string name="title_play">Game</string>
     <string name="title_rankings">Rankings</string>
     <string name="title_profile">Profile</string>
+
+    <!-- PLay strings -->
+    <string name="play_remember_the_number">Remember the number!</string>
+    <string name="play_play">Play</string>
 </resources>
