--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="play_remember_the_number">Remember the number!</string>
     <string name="play_play">Play</string>
     <string name="play_guess">Guess</string>
+    <string name="play_max_score">Max Score: %d</string>
     <string name="play_guess_success">Good job! :)</string>
     <string name="play_guess_failure">That was not the right number :(</string>
 
